--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     justify-content: center;
     font-family: 'Roboto', sans-serif;
     min-height: 100vh;
-    background: linear-gradient(to bottom right, #B7518E, #BCB837);
+    background: linear-gradient(to bottom right, #0a07b8, #01ffa2);
 }
 
 /* App styles */
@@ -32,7 +32,7 @@ body {
     justify-content: space-around;
     height: 500px;
     width: 300px;
-    background: #5FC7A3;
+    background: #00e1ff;
     border-radius: 20px;
 }
 
